# QuickSend

./: .gitignore  README.md  build.bat  index.html  package-lock.json  package.json  tailwind.config.js
.github/workflows/: macos-release.yml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  I18N.md  USER_GUIDE.md
src/: App.tsx  i18n.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: input.rs  lib.rs  main.rs
src-tauri/src/commands/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/platform/: mod.rs
src/components/: Popup.tsx  Settings.tsx
src/hooks/: useTauri.ts
src/types/: index.ts
src/utils/: clipboardHistory.ts  pinyin.ts
